2005-11-28 Konstantin Triger <kostat@mainsoft.com>

	* Icon.cs: TARGET_JVM changes.

2005-11-17 Vladimir Krasnov <vladimirk@mainsoft.com>

	* Image.jvm.cs: fixed Save, flush output stream

2005-11-17 Konstantin Triger <kostat@mainsoft.com>

        * StrokeFactory.jvm.cs, Pen.jvm.cs, Graphics.jvm.cs: performance - use BasicStroke when possible.

2005-11-17 Vladimir Krasnov <vladimirk@mainsoft.com>

	* ColorConverter.cs: fixed ConvertFrom, to be able
	to convert from three digit notation color (#abc)

2005-11-16 Konstantin Triger <kostat@mainsoft.com>

        * Bitmap.jvm.cs: open a correct stream.

2005-11-16 Konstantin Triger <kostat@mainsoft.com>

        * FontFamily.jvm.cs, Font.jvm.cs: throw exception if invalid params.

2005-11-16 Konstantin Triger <kostat@mainsoft.com>

        * FontFamily.jvm.cs: fix for custom font collection

2005-11-14 Vladimir Krasnov <vladimirk@mainsoft.com>

	* FontFamily.jvm.cs: fixed GetName

2005-11-14 Vladimir Krasnov <vladimirk@mainsoft.com>

	* Bitmap.jvm.cs: fixed InternalSave() error handling
	* Image.jvm.cs: fixed Save() error handling

2005-11-13 Konstantin Triger <kostat@mainsoft.com>

        * FontFamily.jvm.cs: Refactoring.

2005-11-13 Konstantin Triger <kostat@mainsoft.com>

        * Font.jvm.cs: Refactoring.

2005-11-13 Konstantin Triger <kostat@mainsoft.com>

        * StringFormat.jvm.cs, Graphics.jvm.cs: DrawString,
		MeasureString support

2005-11-13 Konstantin Triger <kostat@mainsoft.com>

        * FontFamily.jvm.cs: correctly initialize fontcollection

2005-11-13 Konstantin Triger <kostat@mainsoft.com>

        * FontFamily.jvm.cs: DrawMargin, refactoring.

2005-11-13 Konstantin Triger <kostat@mainsoft.com>

        * Graphics.jvm.cs, Pen.jvm.cs, AdvancedStroke.jvm.cs:
                Differentiate standard and AntiAlias stroking

2005-11-10 Vladimir Krasnov <vladimirk@mainsoft.com>

	* Graphics.jvm.cs: added UnitConversion property
	* FontFamily.jvm.cs: refactoring
	* Font.jvm.cs: refactoring
